typescript/checker/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts.stderr
error: ReturnRequired {
    span: Span {
        lo: BytePos(
            274,
        ),
        hi: BytePos(
            279,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:9:21
  |
9 | async function fn2(): { } { } // error
  |                     ^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            354,
        ),
        hi: BytePos(
            362,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:11:21
   |
11 | async function fn4(): number { } // error
   |                     ^^^^^^^^

error: unimplemented
expand_export_info(PromiseLike)
File: $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:12:1
   |
12 | async function fn5(): PromiseLike<void> { } // error
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            397,
        ),
        hi: BytePos(
            416,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:12:21
   |
12 | async function fn5(): PromiseLike<void> { } // error
   |                     ^^^^^^^^^^^^^^^^^^^

error: unimplemented
expand_export_info(Thenable)
File: $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:13:1
   |
13 | async function fn6(): Thenable { } // error
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            451,
        ),
        hi: BytePos(
            461,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:13:21
   |
13 | async function fn6(): Thenable { } // error
   |                     ^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            689,
        ),
        hi: BytePos(
            698,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/async/es5/functionDeclarations/asyncFunctionDeclaration15_es5.ts:17:32
   |
17 | async function fn10() { return undefined; } // valid: Promise<any>
   |                                ^^^^^^^^^

